// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a Controlled ProgressivePaginator - LArge 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    aria-label="pagination"
    className="paginator"
    role="navigation"
  >
    <div>
      <button
        aria-disabled={true}
        aria-label="Terra.paginator.first"
        className="nav-link is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={null}
        type="button"
      >
        Terra.paginator.first
      </button>
      <button
        aria-disabled={true}
        aria-label="Terra.paginator.previous"
        className="nav-link previous icon-only is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={null}
        type="button"
      >
        <VisuallyHiddenText
          text="Terra.paginator.previous"
        />
        <span
          className="icon"
        />
      </button>
    </div>
    <div>
      Terra.paginator.pageCount
    </div>
    <div>
      <button
        aria-disabled={false}
        aria-label="Terra.paginator.next"
        className="nav-link next icon-only"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        type="button"
      >
        <VisuallyHiddenText
          text="Terra.paginator.next"
        />
        <span
          className="icon"
        />
      </button>
      <button
        aria-disabled={false}
        aria-label="Terra.paginator.last"
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        type="button"
      >
        Terra.paginator.last
      </button>
    </div>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a Controlled ProgressivePaginator - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    aria-label="pagination"
    className="paginator progressive"
    role="navigation"
  >
    <div>
      Terra.paginator.pageCount
    </div>
    <div>
      <button
        aria-disabled={true}
        aria-label="Terra.paginator.first"
        className="nav-link is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={null}
        type="button"
      >
        Terra.paginator.first
      </button>
      <button
        aria-disabled={true}
        aria-label="Terra.paginator.previous"
        className="nav-link previous is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={null}
        type="button"
      >
        <span
          className="icon"
        />
        Terra.paginator.previous
      </button>
      <button
        aria-disabled={false}
        aria-label="Terra.paginator.next"
        className="nav-link next"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        type="button"
      >
        Terra.paginator.next
        <span
          className="icon"
        />
      </button>
      <button
        aria-disabled={false}
        aria-label="Terra.paginator.last"
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        type="button"
      >
        Terra.paginator.last
      </button>
    </div>
  </div>
</ResponsiveElement>
`;
